@@ -10,6 +10,6 @@ AUTHORS:
     *nix port, who adapt original emulation code to GCC standards, completelly
     rewrite generation of image and sound to SDL and programmed new menu.
 
-~ ub880d <ub880d@zxmail.org>
+~ ub880d <ub880d@users.sourceforge.net>
   - tester, bug-catcher and support of this project.
 
